ONGDB-244 - Windows package failing to startup with invalid start command