@@ -16,8 +16,8 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-# Copyright (c) 2002-2018 "Neo Technology,"
-# Network Engine for Objects in Lund AB [http://neotechnology.com]
+# Copyright (c) 2002-2018 "Neo4j,"
+# Neo4j Sweden AB [http://neo4j.com]
 #
 # This file is part of Neo4j.
 #
@@ -40,7 +40,7 @@
 Retrieves information about Java on the local machine to start ONgDB programs
 
 .DESCRIPTION
-Retrieves information about Java on the local machine to start ONgDB services and utilites, tailored to the type of ONgDB edition
+Retrieves information about Java on the local machine to start ONgDB services and utilities, tailored to the type of ONgDB edition
 
 .PARAMETER ONgDBServer
 An object representing a valid ONgDB Server object
@@ -57,7 +57,7 @@ The name of the starting class when invoking Java
 .EXAMPLE
 Get-Java -ONgDBServer $serverObject -ForServer
 
-Retrieves the Java comamnd line to start the ONgDB server for the instance in $serverObject.
+Retrieves the Java command line to start the ONgDB server for the instance in $serverObject.
 
 .OUTPUTS
 System.Collections.Hashtable
@@ -66,29 +66,29 @@ System.Collections.Hashtable
 This function is private to the powershell module
 
 #>
-Function Get-Java
+function Get-Java
 {
-  [cmdletBinding(SupportsShouldProcess=$false,ConfirmImpact='Low',DefaultParameterSetName='Default')]
-  param (
-    [Parameter(Mandatory=$true,ValueFromPipeline=$false,ParameterSetName='UtilityInvoke')]
-    [Parameter(Mandatory=$true,ValueFromPipeline=$false,ParameterSetName='ServerInvoke')]
-    [PSCustomObject]$ONgDBServer
+  [CmdletBinding(SupportsShouldProcess = $false,ConfirmImpact = 'Low',DefaultParameterSetName = 'Default')]
+  param(
+    [Parameter(Mandatory = $true,ValueFromPipeline = $false,ParameterSetName = 'UtilityInvoke')]
+    [Parameter(Mandatory = $true,ValueFromPipeline = $false,ParameterSetName = 'ServerInvoke')]
+    [pscustomobject]$ONgDBServer
 
-    ,[Parameter(Mandatory=$true,ValueFromPipeline=$false,ParameterSetName='ServerInvoke')]
+    ,[Parameter(Mandatory = $true,ValueFromPipeline = $false,ParameterSetName = 'ServerInvoke')]
     [switch]$ForServer
 
-    ,[Parameter(Mandatory=$true,ValueFromPipeline=$false,ParameterSetName='UtilityInvoke')]
+    ,[Parameter(Mandatory = $true,ValueFromPipeline = $false,ParameterSetName = 'UtilityInvoke')]
     [switch]$ForUtility
 
-    ,[Parameter(Mandatory=$true,ValueFromPipeline=$false,ParameterSetName='UtilityInvoke')]
+    ,[Parameter(Mandatory = $true,ValueFromPipeline = $false,ParameterSetName = 'UtilityInvoke')]
     [string]$StartingClass
   )
 
-  Begin
+  begin
   {
   }
 
-  Process
+  process
   {
     $javaPath = ''
     $javaCMD = ''
@@ -101,7 +101,7 @@ Function Get-Java
     {
       $javaPath = $EnvJavaHome
       # Modify the java path if a JRE install is detected
-      if (Test-Path -Path "$javaPath\bin\javac.exe") { $javaPath = "$javaPath\jre" }
+      if (Test-Path -Path "$javaPath\jre\bin\java.exe") { $javaPath = "$javaPath\jre" }
     }
 
     # Attempt to find Java in registry
@@ -161,31 +161,32 @@ Function Get-Java
 
     Write-Verbose "Java detected at '$javaCMD'"
 
-    if (-not (Confirm-JavaVersion -Path $javaCMD)) {  Write-Error "This instance of Java is not supported"; return $null }
+    $javaVersion = Get-JavaVersion -Path $javaCMD
+    if (-not $javaVersion.isValid) { Write-Error "This instance of Java is not supported"; return $null }
 
     # Shell arguments for the ONgDBServer and Arbiter classes
     $ShellArgs = @()
     if ($PsCmdlet.ParameterSetName -eq 'ServerInvoke')
     {
-      $serverMainClass = ''
+      $serverMainClass = 'org.neo4j.server.enterprise.EnterpriseEntryPoint'
       if ($ONgDBServer.ServerType -eq 'Community') { $serverMainClass = 'org.neo4j.server.CommunityEntryPoint' }
       if ($ONgDBServer.DatabaseMode.ToUpper() -eq 'ARBITER') { $serverMainClass = 'org.neo4j.server.enterprise.ArbiterEntryPoint' }
 
       if ($serverMainClass -eq '') { Write-Error "Unable to determine the Server Main Class from the server information"; return $null }
 
       # Build the Java command line
-      $ClassPath="$($ONgDBServer.Home)/lib/*;$($ONgDBServer.Home)/plugins/*"
-      $ShellArgs = @("-cp `"$($ClassPath)`""`
-                    ,'-server' `
-                    ,'-Dlog4j.configuration=file:conf/log4j.properties' `
-                    ,'-Dneo4j.ext.udc.source=zip-powershell' `
-                    ,'-Dorg.neo4j.cluster.logdirectory=data/log' `
-      )
+      $ClassPath = "$($ONgDBServer.Home)/lib/*;$($ONgDBServer.Home)/plugins/*"
+      $ShellArgs = @("-cp `"$($ClassPath)`"" `
+          ,'-server' `
+          ,'-Dlog4j.configuration=file:conf/log4j.properties' `
+          ,'-Dneo4j.ext.udc.source=zip-powershell' `
+          ,'-Dorg.neo4j.cluster.logdirectory=data/log' `
+        )
 
       # Parse Java config settings - Heap initial size
       $option = (Get-ONgDBSetting -Name 'dbms.memory.heap.initial_size' -ONgDBServer $ONgDBServer)
       if ($option -ne $null) {
-        $mem="$($option.Value)"
+        $mem = "$($option.Value)"
         if ($mem -notmatch '[\d]+[gGmMkK]') {
           $mem += "m"
           Write-Warning @"
@@ -196,14 +197,14 @@ WARNING: dbms.memory.heap.initial_size will require a unit suffix in a
          dbms.memory.heap.initial_size=512m
                                           ^
 "@
-          }
+        }
         $ShellArgs += "-Xms$mem"
       }
 
       # Parse Java config settings - Heap max size
       $option = (Get-ONgDBSetting -Name 'dbms.memory.heap.max_size' -ONgDBServer $ONgDBServer)
       if ($option -ne $null) {
-        $mem="$($option.Value)"
+        $mem = "$($option.Value)"
         if ($mem -notmatch '[\d]+[gGmMkK]') {
           $mem += "m"
           Write-Warning @"
@@ -214,7 +215,7 @@ WARNING: dbms.memory.heap.max_size will require a unit suffix in a
          dbms.memory.heap.max_size=512m
                                       ^
 "@
-          }
+        }
         $ShellArgs += "-Xmx$mem"
       }
 
@@ -224,61 +225,84 @@ WARNING: dbms.memory.heap.max_size will require a unit suffix in a
 
       # Parse Java config settings - GC
       $option = (Get-ONgDBSetting -Name 'dbms.logs.gc.enabled' -ONgDBServer $ONgDBServer)
-      if (($option -ne $null) -and ($option.Value.ToLower() -eq 'true')) {
-        $ShellArgs += "-Xloggc:`"$($ONgDBServer.Home)/gc.log`""
+      if (($option -ne $null) -and ($option.value.ToLower() -eq 'true')) {
+        if ($javaVersion.isJava8) {
+          # JAVA 8 GC logs configuration
+          $ShellArgs += "-Xloggc:`"$($ONgDBServer.LogDir)/gc.log`""
 
-        $option = (Get-ONgDBSetting -Name 'dbms.logs.gc.options' -ONgDBServer $ONgDBServer)
-        if ($option -eq $null) {
-          $ShellArgs += @('-XX:+PrintGCDetails',
-                          '-XX:+PrintGCDateStamps',
-                          '-XX:+PrintGCApplicationStoppedTime',
-                          '-XX:+PrintPromotionFailure',
-                          '-XX:+PrintTenuringDistribution',
-                          '-XX:+UseGCLogFileRotation')
-        } else {
-          # The GC options _should_ be space delimited
-          $ShellArgs += ($option.Value -split ' ')
-        }
+          $option = (Get-ONgDBSetting -Name 'dbms.logs.gc.options' -ONgDBServer $ONgDBServer)
+          if ($option -eq $null) {
+            $ShellArgs += @('-XX:+PrintGCDetails',
+            '-XX:+PrintGCDateStamps',
+            '-XX:+PrintGCApplicationStoppedTime',
+            '-XX:+PrintPromotionFailure',
+            '-XX:+PrintTenuringDistribution',
+            '-XX:+UseGCLogFileRotation')
+          } else {
+            # The GC options _should_ be space delimited
+            $ShellArgs += ($option.value -split ' ')
+          }
 
-        $option = (Get-ONgDBSetting -Name 'dbms.logs.gc.rotation.size' -ONgDBServer $ONgDBServer)
-        if ($option -ne $null) {
-          $ShellArgs += "-XX:GCLogFileSize=$($option.value)"
-        } else {
-          $ShellArgs += "-XX:GCLogFileSize=20m"
-        }
+          $option = (Get-ONgDBSetting -Name 'dbms.logs.gc.rotation.size' -ONgDBServer $ONgDBServer)
+          if ($option -ne $null) {
+            $ShellArgs += "-XX:GCLogFileSize=$( $option.value )"
+          } else {
+            $ShellArgs += "-XX:GCLogFileSize=20m"
+          }
 
-        $option = (Get-ONgDBSetting -Name 'dbms.logs.gc.rotation.keep_number' -ONgDBServer $ONgDBServer)
-        if ($option -ne $null) {
-          $ShellArgs += "-XX:NumberOfGCLogFiles=$($option.value)"
+          $option = (Get-ONgDBSetting -Name 'dbms.logs.gc.rotation.keep_number' -ONgDBServer $ONgDBServer)
+          if ($option -ne $null) {
+            $ShellArgs += "-XX:NumberOfGCLogFiles=$( $option.value )"
+          } else {
+            $ShellArgs += "-XX:NumberOfGCLogFiles=5"
+          }
         } else {
-          $ShellArgs += "-XX:NumberOfGCLogFiles=5"
+          # JAVA 9 and newer GC logs configuration
+          $option = (Get-ONgDBSetting -Name 'dbms.logs.gc.options' -ONgDBServer $ONgDBServer)
+          if ($option -ne $null) {
+            $gcOptions = $option.value
+          } else {
+            $gcOptions = '-Xlog:gc*,safepoint,age*=trace'
+          }
+          # GC file name should be escaped on Windows because of ':' usage as part of absolute name
+          $gcFile = "\`"" + "$($ONgDBServer.LogDir)/gc.log" + "\`""
+          $gcOptions += ":file=$( $gcFile )::"
+
+          $option = (Get-ONgDBSetting -Name 'dbms.logs.gc.rotation.keep_number' -ONgDBServer $ONgDBServer)
+          if ($option -ne $null) {
+            $gcOptions += "filecount=$( $option.value )"
+          } else {
+            $gcOptions += "filecount=5"
+          }
+
+          $option = (Get-ONgDBSetting -Name 'dbms.logs.gc.rotation.size' -ONgDBServer $ONgDBServer)
+          if ($option -ne $null) {
+            $gcOptions += ",filesize=$( $option.value )"
+          } else {
+            $gcOptions += ",filesize=20m"
+          }
+          $ShellArgs += $gcOptions
         }
       }
-        $ShellArgs += @("-Dfile.encoding=UTF-8",
-                        $serverMainClass,
-                        "--config-dir=`"$($ONgDBServer.ConfDir)`"",
-                        "--home-dir=`"$($ONgDBServer.Home)`"")
+      $ShellArgs += @("-Dfile.encoding=UTF-8",
+      $serverMainClass,
+      "--config-dir=`"$($ONgDBServer.ConfDir)`"",
+      "--home-dir=`"$($ONgDBServer.Home)`"")
     }
 
     # Shell arguments for the utility classes e.g. Import, Shell
     if ($PsCmdlet.ParameterSetName -eq 'UtilityInvoke')
     {
       # Generate the commandline args
-      $ClassPath = ''
-      # Enumerate all JARS in the lib directory and add to the class path
-      Get-ChildItem -Path (Join-Path  -Path $ONgDBServer.Home -ChildPath 'lib') | Where-Object { $_.Extension -eq '.jar'} | % {
-        $ClassPath += "`"$($_.FullName)`";"
-      }
-      # Enumerate all JARS in the bin directory and add to the class path
-      Get-ChildItem -Path (Join-Path  -Path $ONgDBServer.Home -ChildPath 'bin') | Where-Object { $_.Extension -eq '.jar'} | % {
-        $ClassPath += "`"$($_.FullName)`";"
-      }
-      if ($ClassPath.Length -gt 0) { $ClassPath = $ClassPath.SubString(0, $ClassPath.Length-1) } # Strip the trailing semicolon if needed
+      $ClassPath = "$($ONgDBServer.Home)/lib/*;$($ONgDBServer.Home)/bin/*"
+      # Augment with tools.jar if found
+      if (Test-Path -Path "$EnvJavaHome\lib\tools.jar") { $ClassPath += ";$EnvJavaHome\lib\tools.jar" }
 
       $ShellArgs = @()
-      $ShellArgs += @("-classpath $($EnvClassPrefix);$ClassPath",
-                      "-Dbasedir=`"$($ONgDBServer.Home)`"", `
-                      '-Dfile.encoding=UTF-8')
+      $ShellArgs += @("-XX:+UseParallelGC",
+      "-classpath `"$($EnvClassPrefix);$ClassPath`"",
+      "-Dbasedir=`"$($ONgDBServer.Home)`"",`
+           '-Dfile.encoding=UTF-8')
 
       # Determine user configured heap size.
       $HeapSize = Get-ONgDBEnv 'HEAP_SIZE'
@@ -291,10 +315,10 @@ WARNING: dbms.memory.heap.max_size will require a unit suffix in a
       $ShellArgs += @($StartingClass)
     }
 
-    Write-Output @{'java' = $javaCMD; 'args' = $ShellArgs}
+    Write-Output @{ 'java' = $javaCMD; 'args' = $ShellArgs }
   }
 
-  End
+  end
   {
   }
 }
